--- a/News Analysis.ipynb
+++ b/News Analysis.ipynb
@@ -1335,7 +1335,8 @@
    "cell_type": "code",
    "execution_count": 365,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1375,39 +1376,6 @@
    ],
    "source": [
     "text_bi_finder.nbest(trigram_measures.pmi, 25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import sys  \n",
-    "\n",
-    "reload(sys)  \n",
-    "sys.setdefaultencoding('utf8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "hd_tokens = []\n",
-    "stopset = set(stopwords.words('english'))\n",
-    "with open(head_soup, 'r') as head:\n",
-    "    hd = head.read()\n",
-    "    tokens = nltk.word_tokenize(hd)\n",
-    "    tokens = [w for w in tokens if not w in stopset]\n",
-    "    hd_tokens.append(tokens)"
    ]
   }
  ],
