--- a/Earnings Scraper.ipynb
+++ b/Earnings Scraper.ipynb
@@ -43,6 +43,7 @@
    },
    "outputs": [],
    "source": [
+    "import itertools\n",
     "import numpy as np\n",
     "import scipy as sp\n",
     "import matplotlib as mpl\n",
@@ -111,6 +112,35 @@
     "    pdfile = requests.get(link)\n",
     "    with open('nflx.pdf', 'wb') as f:\n",
     "        f.write(pdfile.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_amzn(link_dict):\n",
+    "    while True:\n",
+    "        page = requests.get(link_dict['AMZN'])\n",
+    "        soup = BeautifulSoup(page.text, 'html.parser')\n",
+    "        q3_html = soup.find_all('div', {'class': 'a-section article-copy'})[0]\n",
+    "        docs = q3_html.find_all('a')\n",
+    "        dwnload = []\n",
+    "        found = False\n",
+    "        for doc in docs:\n",
+    "            if doc.text == 'Q3 2016 Financial Results':\n",
+    "                link = doc['href']\n",
+    "                found = True\n",
+    "                break\n",
+    "        if found:\n",
+    "            break\n",
+    "        time.sleep(1)\n",
+    "    pdfile = requests.get(link)\n",
+    "    with open('amzn.pdf', 'wb') as f:\n",
+    "        f.write(pdfile.content)\n"
    ]
   },
   {
@@ -307,6 +337,30 @@
     "                    print(\"Basic EPS: \" + row[2])\n",
     "                    break\n",
     "            break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def amzn_parser(pages):\n",
+    "    page = pages[0]\n",
+    "    tail = pages[1:]\n",
+    "    flattened = list(itertools.chain.from_iterable(page))\n",
+    "    if any(\"Consolidated Statements of Operations\" in s for s in flattened):\n",
+    "        index1 = flattened.index('Total net sales ') + 1\n",
+    "        print(\"Revenue: \" + flattened[index1]) \n",
+    "        index2 = flattened.index('Basic earnings per share ') + 2\n",
+    "        print(\"Basic EPS: \" + flattened[index2])\n",
+    "    else:\n",
+    "        if tail != []:\n",
+    "            amzn_parser(tail)\n",
+    "        else:\n",
+    "            print \"No Data\""
    ]
   },
   {
