openatoy cmd line file

--- a/News Analysis.ipynb
+++ b/News Analysis.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -250,75 +250,68 @@
     {
      "data": {
       "text/plain": [
-       "[('HEALT.BW', 9),\n",
-       " ('.HEALTH', 9),\n",
-       " ('S.BW', 9),\n",
-       " ('.NASDAQ', 9),\n",
-       " ('BIOTC.BW', 8),\n",
-       " ('.PRODUCT', 8),\n",
-       " ('PHARM.BW', 8),\n",
-       " ('.BIOTECH', 8),\n",
-       " ('PRODU.BW', 8),\n",
-       " ('.PHARMA', 8),\n",
-       " ('.FDA', 7),\n",
-       " ('FDA.BW', 7),\n",
-       " ('CLINT.BW', 6),\n",
-       " ('ONCOL.BW', 5),\n",
-       " ('.CC', 4),\n",
-       " ('CLVS', 3),\n",
-       " ('.CO', 3),\n",
-       " ('WEBCS.BW', 3),\n",
-       " ('CO.BW', 3),\n",
-       " ('.MEDICAL', 2),\n",
-       " ('CONFC.BW', 2),\n",
-       " ('AUPH', 2),\n",
-       " ('AUP.T', 2),\n",
-       " ('HOSPI.BW', 2),\n",
-       " ('SCIENCE.BW', 2),\n",
-       " ('ARIA', 1),\n",
-       " ('ANIK', 1),\n",
-       " ('MHEAL.BW', 1),\n",
-       " ('ADVIS.BW', 1),\n",
-       " ('MDDEV.BW', 1),\n",
-       " ('PHOTOMULT.BW', 1),\n",
-       " ('OSCI.BW', 1),\n",
-       " ('.NJ', 1),\n",
-       " ('CONTRAGR.BW', 1),\n",
-       " ('MDSUP.BW', 1)]"
+       "[('N/WED', 40),\n",
+       " ('N/WER', 40),\n",
+       " ('N/DN', 40),\n",
+       " ('N/DJG', 40),\n",
+       " ('N/DJN', 40),\n",
+       " ('N/DJI', 40),\n",
+       " ('N/DJIV', 39),\n",
+       " ('P/SGN', 39),\n",
+       " ('N/DJWI', 39),\n",
+       " ('P/AEQI', 39),\n",
+       " ('N/CNW', 39),\n",
+       " ('P/ABO', 39),\n",
+       " ('N/DJPT', 39),\n",
+       " ('.NAMERICA', 38),\n",
+       " ('R/NME', 38),\n",
+       " ('P/WMMI', 38),\n",
+       " ('S.DJ', 37),\n",
+       " ('R/US', 36),\n",
+       " ('.US', 36),\n",
+       " ('N/DJEN', 33),\n",
+       " ('I/XDJGI', 33),\n",
+       " ('N/DJRT', 33),\n",
+       " ('I/XRUS', 32),\n",
+       " ('P/AEI', 32),\n",
+       " ('.R1', 31),\n",
+       " ('.CORP', 30),\n",
+       " ('N/CAC', 29),\n",
+       " ('.NYSE', 28),\n",
+       " ('.MA', 28),\n",
+       " ('.RESTRUCT', 28),\n",
+       " ('N/TNM', 28),\n",
+       " ('I/XNYA', 27),\n",
+       " ('M/MMR', 26),\n",
+       " ('N/DJGS', 26),\n",
+       " ('P/NAE', 25)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "news_df = get_spreadsheet('HeadlineSpreadsheet.csv')\n",
-    "subsub = subset_df('Biotech', 'Regulatory')\n",
-    "tag_report(subsub, 'BusinessWire')"
+    "subsub = subset_df('M/A', )\n",
+    "tag_report(subsub, 'Dow Jones')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/titans_bball30/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:8: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "FreqDist({'collaboration': 4, 'announce': 3, 'agreement': 3, 'exclusive': 2, 'announces': 2, 'supply': 2, 'cell': 2, 'clinical': 2, 'development': 2, 'include': 2, ...})"
+       "FreqDist({'acquire': 21, 'sources': 12, 'agreement': 12, 'billion': 11, 'talks': 10, 'deal': 8, 'definitive': 7, 'inc.': 7, 'says': 6, 'group': 6, ...})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -347,70 +340,70 @@
     {
      "data": {
       "text/plain": [
-       "[('look', 'forward'),\n",
-       " ('adrenal', 'insufficiency'),\n",
-       " ('chief', 'executive'),\n",
-       " ('executive', 'officer'),\n",
-       " ('european', 'union'),\n",
-       " ('successfully', 'completed'),\n",
-       " ('allogeneic', 'hsct'),\n",
-       " ('single', 'agent'),\n",
-       " ('lupus', 'nephritis'),\n",
-       " ('separate', 'phase3'),\n",
+       "[('balance', 'sheet'),\n",
+       " ('canyon', 'bridge'),\n",
+       " ('track', 'record'),\n",
+       " ('tianjin', 'tianhai'),\n",
+       " ('globe', 'newswire'),\n",
+       " ('adversely', 'affect'),\n",
+       " ('contact', 'center'),\n",
+       " ('superior', 'proposal'),\n",
+       " ('set', 'forth'),\n",
+       " ('morgan', 'stanley'),\n",
+       " ('real', 'estate'),\n",
+       " ('volume', 'weighted'),\n",
+       " ('http', '://'),\n",
+       " ('rare', 'diseases'),\n",
+       " ('weighted', 'average'),\n",
+       " ('otic', 'pharma'),\n",
+       " ('electro', 'rent'),\n",
+       " ('electro', 'rent\\xe2'),\n",
+       " ('low', 'speed'),\n",
+       " ('rockwell', 'collins'),\n",
+       " ('credit', 'suisse'),\n",
+       " ('goldman', 'sachs'),\n",
+       " ('contain', 'important'),\n",
+       " ('looking', 'statements'),\n",
+       " ('colony', 'northstar'),\n",
+       " ('ocean', 'shore\\xe2'),\n",
+       " ('sunedison', 'semiconductor'),\n",
+       " ('blue', 'nile'),\n",
+       " ('ocean', 'shore'),\n",
+       " ('north', 'america'),\n",
        " ('please', 'visit'),\n",
-       " ('conference', 'call'),\n",
-       " ('myers', 'squibb'),\n",
-       " ('administer', 'corticosteroids'),\n",
-       " ('permanently', 'discontinue'),\n",
-       " ('united', 'states'),\n",
-       " ('phase3', 'study'),\n",
-       " ('cell', 'carcinoma'),\n",
-       " ('vifor', 'pharma'),\n",
-       " ('visit', 'www'),\n",
-       " ('nash', 'fibrosis'),\n",
-       " ('nash', 'cirrhosis'),\n",
-       " ('biopharmaceutical', 'company'),\n",
-       " ('checkmate', '205'),\n",
-       " ('regulatory', 'approval'),\n",
-       " ('renal', 'diseases'),\n",
-       " ('company', 'focused'),\n",
-       " ('advanced', 'renal'),\n",
-       " ('adverse', 'reactions'),\n",
-       " ('renal', 'cell'),\n",
-       " ('serious', 'adverse'),\n",
-       " ('liver', 'disease'),\n",
-       " ('common', 'adverse'),\n",
-       " ('mediated', 'hepatitis'),\n",
-       " ('%),', 'diarrhea'),\n",
-       " ('clinical', 'trial'),\n",
-       " ('mediated', 'pneumonitis'),\n",
-       " ('immune', 'system'),\n",
-       " ('commercialization', 'rights'),\n",
-       " ('cause', 'immune'),\n",
-       " ('receiving', 'opdivo'),\n",
-       " ('opdivo', 'monotherapy'),\n",
-       " ('clinical', 'trials'),\n",
-       " ('%),', 'rash'),\n",
-       " ('reactions', 'reported'),\n",
-       " ('monitor', 'patients'),\n",
-       " ('patients', 'receiving'),\n",
-       " ('drug', 'development'),\n",
-       " ('withhold', 'opdivo'),\n",
-       " ('reactions', 'occurred')]"
+       " ('unanimously', 'approved'),\n",
+       " ('exchange', 'ratio'),\n",
+       " ('ingram', 'micro'),\n",
+       " ('great', 'plains'),\n",
+       " ('pro', 'shops'),\n",
+       " ('suffolk', 'bancorp'),\n",
+       " ('bass', 'pro'),\n",
+       " ('city', 'home'),\n",
+       " ('exchange', 'commission'),\n",
+       " ('security', 'holders'),\n",
+       " ('tender', 'offer'),\n",
+       " ('ended', 'december'),\n",
+       " ('fourth', 'quarter'),\n",
+       " ('look', 'forward'),\n",
+       " ('investor', 'relations'),\n",
+       " ('crude', 'oil'),\n",
+       " ('oil', 'search'),\n",
+       " ('ocean', 'city'),\n",
+       " ('pro', 'forma')]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_bigrams(text_soup, 5)"
+    "get_bigrams(text_soup, 8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -426,27 +419,36 @@
     {
      "data": {
       "text/plain": [
-       "[('chief', 'executive', 'officer'),\n",
-       " ('separate', 'phase3', 'study'),\n",
-       " ('biopharmaceutical', 'company', 'focused'),\n",
-       " ('renal', 'cell', 'carcinoma'),\n",
-       " ('advanced', 'renal', 'cell'),\n",
-       " ('serious', 'adverse', 'reactions'),\n",
-       " ('common', 'adverse', 'reactions'),\n",
-       " ('receiving', 'opdivo', 'monotherapy'),\n",
-       " ('adverse', 'reactions', 'reported'),\n",
-       " ('adverse', 'reactions', 'occurred'),\n",
-       " ('mediated', 'adverse', 'reactions'),\n",
-       " ('patients', 'receiving', 'opdivo')]"
+       "[('volume', 'weighted', 'average'),\n",
+       " ('bass', 'pro', 'shops'),\n",
+       " ('ocean', 'city', 'home'),\n",
+       " ('obtain', 'free', 'copies'),\n",
+       " ('electro', 'rent', 'corporation'),\n",
+       " ('http', '://', 'www'),\n",
+       " ('year', 'ended', 'december'),\n",
+       " ('contain', 'important', 'information'),\n",
+       " ('city', 'home', 'bank'),\n",
+       " ('please', 'visit', 'www'),\n",
+       " ('great', 'plains', 'energy'),\n",
+       " ('apollo', 'education', 'group'),\n",
+       " ('customary', 'closing', 'conditions'),\n",
+       " ('chief', 'executive', 'officer'),\n",
+       " ('exclusive', 'financial', 'advisor'),\n",
+       " ('joint', 'proxy', 'statement'),\n",
+       " ('additional', 'information', 'regarding'),\n",
+       " ('apollo', 'global', 'management'),\n",
+       " ('earnings', 'per', 'share'),\n",
+       " ('definitive', 'proxy', 'statement'),\n",
+       " ('definitive', 'merger', 'agreement')]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_trigrams(text_soup, 5)"
+    "get_trigrams(text_soup, 10)"
    ]
   },
   {
