--- a/News Analysis.ipynb
+++ b/News Analysis.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -250,57 +250,30 @@
     {
      "data": {
       "text/plain": [
-       "[('N/WED', 40),\n",
-       " ('N/WER', 40),\n",
-       " ('N/DN', 40),\n",
-       " ('N/DJG', 40),\n",
-       " ('N/DJN', 40),\n",
-       " ('N/DJI', 40),\n",
-       " ('N/DJIV', 39),\n",
-       " ('P/SGN', 39),\n",
-       " ('N/DJWI', 39),\n",
-       " ('P/AEQI', 39),\n",
-       " ('N/CNW', 39),\n",
-       " ('P/ABO', 39),\n",
-       " ('N/DJPT', 39),\n",
-       " ('.NAMERICA', 38),\n",
-       " ('R/NME', 38),\n",
-       " ('P/WMMI', 38),\n",
-       " ('S.DJ', 37),\n",
-       " ('R/US', 36),\n",
-       " ('.US', 36),\n",
-       " ('N/DJEN', 33),\n",
-       " ('I/XDJGI', 33),\n",
-       " ('N/DJRT', 33),\n",
-       " ('I/XRUS', 32),\n",
-       " ('P/AEI', 32),\n",
-       " ('.R1', 31),\n",
-       " ('.CORP', 30),\n",
-       " ('N/CAC', 29),\n",
-       " ('.NYSE', 28),\n",
-       " ('.MA', 28),\n",
-       " ('.RESTRUCT', 28),\n",
-       " ('N/TNM', 28),\n",
-       " ('I/XNYA', 27),\n",
-       " ('M/MMR', 26),\n",
-       " ('N/DJGS', 26),\n",
-       " ('P/NAE', 25)]"
+       "[('S.FO', 3),\n",
+       " ('PERI.FLY', 2),\n",
+       " ('MYL', 2),\n",
+       " ('IPXL', 1),\n",
+       " ('HOTS.FLY', 1),\n",
+       " ('TEVA', 1),\n",
+       " ('BAH', 1),\n",
+       " ('LCI', 1)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "news_df = get_spreadsheet('HeadlineSpreadsheet.csv')\n",
-    "subsub = subset_df('M/A', )\n",
-    "tag_report(subsub, 'Dow Jones')"
+    "subsub = subset_df('Enforcement Agencies', )\n",
+    "tag_report(subsub, 'Fly on the Wall')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -308,10 +281,10 @@
     {
      "data": {
       "text/plain": [
-       "FreqDist({'acquire': 21, 'sources': 12, 'agreement': 12, 'billion': 11, 'talks': 10, 'deal': 8, 'definitive': 7, 'inc.': 7, 'says': 6, 'group': 6, ...})"
+       "FreqDist({'bank': 32, 'said': 23, 'company': 18, 'investigation': 17, 'deutsche': 15, 'billion': 15, 'people': 13, 'lemelson': 12, 'merger': 11, 'settlement': 10, ...})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,135 +293,73 @@
     "make_soup(subsub)\n",
     "head_soup = '/Users/titans_bball30/Desktop/Trlmprojects/headsoup.txt'\n",
     "text_soup = '/Users/titans_bball30/Desktop/Trlmprojects/txtsoup.txt'\n",
-    "keywords(head_soup)"
+    "keywords(text_soup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/titans_bball30/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:9: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[('balance', 'sheet'),\n",
-       " ('canyon', 'bridge'),\n",
-       " ('track', 'record'),\n",
-       " ('tianjin', 'tianhai'),\n",
-       " ('globe', 'newswire'),\n",
-       " ('adversely', 'affect'),\n",
-       " ('contact', 'center'),\n",
-       " ('superior', 'proposal'),\n",
-       " ('set', 'forth'),\n",
-       " ('morgan', 'stanley'),\n",
-       " ('real', 'estate'),\n",
-       " ('volume', 'weighted'),\n",
-       " ('http', '://'),\n",
-       " ('rare', 'diseases'),\n",
-       " ('weighted', 'average'),\n",
-       " ('otic', 'pharma'),\n",
-       " ('electro', 'rent'),\n",
-       " ('electro', 'rent\\xe2'),\n",
-       " ('low', 'speed'),\n",
-       " ('rockwell', 'collins'),\n",
-       " ('credit', 'suisse'),\n",
-       " ('goldman', 'sachs'),\n",
-       " ('contain', 'important'),\n",
-       " ('looking', 'statements'),\n",
-       " ('colony', 'northstar'),\n",
-       " ('ocean', 'shore\\xe2'),\n",
-       " ('sunedison', 'semiconductor'),\n",
-       " ('blue', 'nile'),\n",
-       " ('ocean', 'shore'),\n",
-       " ('north', 'america'),\n",
-       " ('please', 'visit'),\n",
-       " ('unanimously', 'approved'),\n",
-       " ('exchange', 'ratio'),\n",
-       " ('ingram', 'micro'),\n",
-       " ('great', 'plains'),\n",
-       " ('pro', 'shops'),\n",
-       " ('suffolk', 'bancorp'),\n",
-       " ('bass', 'pro'),\n",
-       " ('city', 'home'),\n",
-       " ('exchange', 'commission'),\n",
-       " ('security', 'holders'),\n",
-       " ('tender', 'offer'),\n",
-       " ('ended', 'december'),\n",
-       " ('fourth', 'quarter'),\n",
-       " ('look', 'forward'),\n",
-       " ('investor', 'relations'),\n",
-       " ('crude', 'oil'),\n",
-       " ('oil', 'search'),\n",
-       " ('ocean', 'city'),\n",
-       " ('pro', 'forma')]"
+       "[('new', 'york'),\n",
+       " ('waiting', 'period'),\n",
+       " ('://', 'www'),\n",
+       " ('evaluate', 'whether'),\n",
+       " ('senate', 'special'),\n",
+       " ('alleged', 'abuses'),\n",
+       " ('second', 'request'),\n",
+       " ('business', 'practices'),\n",
+       " ('capital', 'one'),\n",
+       " ('special', 'committee'),\n",
+       " ('orphan', 'drug'),\n",
+       " ('purchase', 'agreement'),\n",
+       " ('people', 'familiar'),\n",
+       " ('justice', 'department'),\n",
+       " ('drug', 'act'),\n",
+       " ('nan', 'nan'),\n",
+       " ('deutsche', 'bank'),\n",
+       " ('people', 'said'),\n",
+       " ('said', 'today'),\n",
+       " ('lemelson', 'said')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_bigrams(text_soup, 8)"
+    "get_bigrams(text_soup, 4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/titans_bball30/anaconda/lib/python2.7/site-packages/IPython/kernel/__main__.py:18: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[('volume', 'weighted', 'average'),\n",
-       " ('bass', 'pro', 'shops'),\n",
-       " ('ocean', 'city', 'home'),\n",
-       " ('obtain', 'free', 'copies'),\n",
-       " ('electro', 'rent', 'corporation'),\n",
-       " ('http', '://', 'www'),\n",
-       " ('year', 'ended', 'december'),\n",
-       " ('contain', 'important', 'information'),\n",
-       " ('city', 'home', 'bank'),\n",
-       " ('please', 'visit', 'www'),\n",
-       " ('great', 'plains', 'energy'),\n",
-       " ('apollo', 'education', 'group'),\n",
-       " ('customary', 'closing', 'conditions'),\n",
-       " ('chief', 'executive', 'officer'),\n",
-       " ('exclusive', 'financial', 'advisor'),\n",
-       " ('joint', 'proxy', 'statement'),\n",
-       " ('additional', 'information', 'regarding'),\n",
-       " ('apollo', 'global', 'management'),\n",
-       " ('earnings', 'per', 'share'),\n",
-       " ('definitive', 'proxy', 'statement'),\n",
-       " ('definitive', 'merger', 'agreement')]"
+       "[('senate', 'special', 'committee'),\n",
+       " ('orphan', 'drug', 'act'),\n",
+       " ('lemelson', 'said', 'today')]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_trigrams(text_soup, 10)"
+    "get_trigrams(text_soup, 4)"
    ]
   },
   {
